--- a/desarrollo_social/views/proceso_nomina.xml
+++ b/desarrollo_social/views/proceso_nomina.xml
@@ -14,9 +14,8 @@
 					<field name="model">hr.payslip.run</field>
 					<field name="inherit_id" ref="hr_payroll.hr_payslip_run_form"/>
 					<field name="arch" type="xml">
-						<label for="name" class="oe_edit_only"/>
 						<field name="credit_note" position="before">
-							<field name="fecha" class="oe_inline"/>
+							<h2><field name="fecha" class="oe_inline"/></h2>
 						</field>
 					</field>
 			</record>
