FIX - Cambio de la categoría 'Becados' por 'Becado' en los archivos categorias.xml, becado.xml y activación de la carga de categorías en _openerp_.py

--- a/desarrollo_social/views/becado.xml
+++ b/desarrollo_social/views/becado.xml
@@ -6,7 +6,7 @@
 		 	<field name="name">Desarrollo Social</field>
 			<field name="res_model">hr.employee</field>
 			<field name="view_type">form</field>
-			<field name="domain">[('category_ids.name','ilike','Becados')]</field>
+			<field name="domain">[('category_ids.name','ilike','Becado')]</field>
 			<field name="view_mode">tree,form</field>
 		</record>
 
@@ -81,6 +81,11 @@
 				<field name="coordinador_eje" position="after">
 					<field name="coordinador_sede" widget="selection" groups="desarrollo_social.desarrollosocial"/>
 				</field>
+<!--
+				<field name="tipo_nomina" position="after">
+					<field name="class_personal"/>
+				</field>
+-->
 				<field name="birthday" position="after">
 					<field name="edad" class="oe_inline" readonly="1"/>
 				</field>
@@ -163,6 +168,7 @@
 					</field>
 			</field>
 		</record>
+		
 		<menuitem name="Desarrollo Social" id="menu_desarrollo_social"/>
 		<menuitem name="Desarrollo Social" id="menu_desarrollo_social_main" parent="menu_desarrollo_social"/>
 		<menuitem parent="menu_desarrollo_social_main" id="becado" action="accion_vista_becados" name="Becado"/>
