--- a/l10n_ve_topology/view/zipcode_view.xml
+++ b/l10n_ve_topology/view/zipcode_view.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
+        
         <record id="view_zipcode_tree" model="ir.ui.view">
-            <field name="name">res.zipcode.tree</field>
-            <field name="model">res.zipcode</field>
+            <field name="name">res.country.zipcode.tree</field>
+            <field name="model">res.country.zipcode</field>
             <field name="type">tree</field>
             <field name="arch" type="xml">
                 <tree string="Zipcode">
@@ -13,29 +14,18 @@
         </record>
 
         <record id="view_zipcode_form" model="ir.ui.view">
-            <field name="name">res.zipcode.form</field>
-            <field name="model">res.zipcode</field>
+            <field name="name">res.country.zipcode.form</field>
+            <field name="model">res.country.zipcode</field>
             <field name="type">form</field>
             <field name="arch" type="xml">
                 <form string="Zipcode">
                     <group colspan="2" >
-                    <field name="name" select="1"/>
+                    <field name="name"/>
                     <newline/>
                     </group>
                 </form>
             </field>
         </record>
-
-        <record id="action_zipcode" model="ir.actions.act_window">
-            <field name="name">Zipcode</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="res_model">res.zipcode</field>
-            <field name="view_type">form</field>
-            <field name="view_id" ref="view_zipcode_tree"/>
-            <field name="help">Is a series of digits appended to a postal address for the purpose of sorting mail</field>
-        </record>
-        
-        <menuitem action="action_zipcode" id="menu_zipcode" parent="base.menu_localisation"/>
 
     </data>
 </openerp>
