--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -115,7 +115,7 @@ PROYECTOS
                              <field name="cobertura"/>
                              <field name="priority"/>
                              <field name="tipo_financiamiento"/>
-                             <field name="adjunto_gaceta"/>  
+                             <field name="adjunto_gaceta" string="Adjuntar Gaceta digital (PDF)" filename="adjunto_gaceta_name"/>
                         </group>
                     </group>
                     <notebook>
@@ -370,9 +370,10 @@ INCIDENCIAS
             <field name="model">gdc.incidencias</field>
             <field name="arch" type="xml">
                 <tree string="Incidencias">
+                    <field name="date_reporter" />
+                    <field name="reporter_id" />
                     <field name="tarea_id" />
                     <field name="name_incidencia" />
-                    <field name="date_reporter" />
                 </tree>
             </field>
         </record>
@@ -384,10 +385,15 @@ INCIDENCIAS
                 <form string="Incidencias" version="7.0">
                     <group>
                         <group>
-                            <field name="project_id" invisible="1"/>
-                            <field name="date_reporter" />
-                            <field name="tarea_id" on_change="onchange_tarea(tarea_id)"/>
-                            <field name="name_incidencia" />
+                            <group>
+                                <field name="project_id" invisible="1"/>
+                                <field name="date_reporter" />
+                                <field name="reporter_id"/>
+                            </group>
+                            <group>
+                                <field name="tarea_id" on_change="onchange_tarea(tarea_id)"/>
+                                <field name="name_incidencia" />
+                            </group>
                         </group>
                         <separator string="Especifique las caracteristicas de la incidencia" colspan="2"/>
                         <field name="description" nolabel="1"/>
