--- a/desarrollo_social/views/becado.xml
+++ b/desarrollo_social/views/becado.xml
@@ -6,7 +6,7 @@
 		 	<field name="name">Desarrollo Social</field>
 			<field name="res_model">hr.employee</field>
 			<field name="view_type">form</field>
-			<field name="domain">[('category_ids.name','ilike','Becado')]</field>
+			<field name="domain">['|',('categoria','ilike','1'),('category_ids.name','ilike','Becado')]</field>
 			<field name="view_mode">tree,form</field>
 		</record>
 
@@ -18,11 +18,14 @@
 				<field name="identification_id" position="replace">
 					<field name="cedula"/>
 				</field>
+				<field name="cedula" position="after">
+					<field name="usuario" invisible="1"/>
+				</field>
 				<field name="passport_id" position="after">
 					<field name="tiempo_servicio"/>
 				</field>
 				<field name="tiempo_servicio" position="after">
-					<field name="empleado" groups="desarrollo_social.grupo_desarrollo_social1"/>
+					<field name="empleado" attrs="{'invisible': [('categoria', '=', '1') ] }"/>
 				</field>
 				<field name="empleado" position="after">
 					<field name="tipo_beca"/>
@@ -40,7 +43,7 @@
 					<field name="direccion"/>
 				</field>
 				<field name="empleado" position="after">
-					<field name="grado_instruccion"/>
+					<field name="grado_instruccion" />
 				</field>
 				<field name="grado_instruccion" position="after">
 					<field name="titulo_obtenido"/>
@@ -69,13 +72,21 @@
 				<field name="fecha_ingreso" position="after">
 					<field name="fecha_egreso"/>
 				</field>
+				<field name="address_id" position="replace">
+					<field name="address_id" invisible="1"/>
+				</field>
+				<field name="work_email" position="replace">
+					<field name="work_email" invisible="1"/>
+				</field>
 				<field name="department_id" position="before">
 					<field name="sede"/>
 				</field>
+<!--
 				<field name="department_id" position="after">
 					<field name="area"/>
 				</field>
-				<field name="area" position="after">
+-->
+				<field name="sede" position="after">
 					<field name="tipo_nomina"/>
 				</field>
 				<field name="coach_id" position="after">
@@ -85,9 +96,6 @@
 				<field name="coordinador_eje" position="after">
 					<field name="coordinador_sede" widget="selection"/>
 					<!--groups="desarrollo_social.desarrollosocial"-->
-				</field>
-				<field name="coordinador_sede" position="after">
-					<field name="usuario" invisible="0"/>
 				</field>				
 <!--
 				<field name="tipo_nomina" position="after">
@@ -125,10 +133,10 @@
 					<field name="zapato" class="oe_inline"/>
 				</field>
 				<field name="zapato" position="after">
-					<field name="caja_ahorro" class="oe_inline" attrs="{'invisible': [('usuario', '=', 'ycastellanos') ] }"/>
+					<field name="caja_ahorro" class="oe_inline" attrs="{'invisible': [('categoria', '=', '1') ] }"/>
 				</field>
 				<field name="caja_ahorro" position="after">
-					<field name="prima_responsabilidad" class="oe_inline" attrs="{'invisible': [('usuario', '=', 'ycastellanos') ] }"/>
+					<field name="prima_responsabilidad" class="oe_inline" attrs="{'invisible': [('categoria', '=', '1') ] }"/>
 				</field>
 				<field name="direccion" position="after">
 					<field name="cne"/>
@@ -145,6 +153,9 @@
 				<field name="category_ids" position="after">
 				<label for="carga_familiar" class="oe_edit_only"/>
 					<field name="carga_familiar" class="oe_inline" nolabel="0"/>
+				</field>
+				<field name="gender" position="replace">
+					<field name="sexo"/>
 				</field>
 				<!--Campo oculto para formato PDF -->
 				<field name="carga_familiar" position="after">
@@ -189,7 +200,19 @@
 						<field name="tlf_movil"/>
 					</field>
 					<field name="job_id" position="after">
-						<field name="category_ids"/>
+						<field name="category_ids" invisible="1"/>
+					</field>
+					<field name="parent_id" position="replace">
+						<field name="parent_id" invisible="1"/>
+					</field>
+					<field name="department_id" position="replace">
+						<field name="sede"/>
+					</field>
+					<field name="work_email" position="replace">
+						<field name="correo"/>
+					</field>
+					<field name="work_phone" position="replace">
+						<field name="tlf_local"/>
 					</field>
 			</field>
 		</record>
